# zotero_mcp_server_write

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/zotero_mcp_server_write/: __init__.py  client.py  notes.py  server.py
tests/: test_client.py  test_notes.py  test_tools.py
