[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp-server-write"
version = "0.1.0"
description = "MCP server exposing Zotero local write operations (DOI import, PDF import with recognition, attach PDF, add note)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "akchan" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "markdown-it-py>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
zotero-mcp-server-write = "zotero_mcp_server_write.server:main"

[project.urls]
Homepage = "https://github.com/akchan/zotero_mcp_server_write"
Repository = "https://github.com/akchan/zotero_mcp_server_write"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp_server_write"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
